add Viewer all information message